manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smartdispatch
  labels:
    app.kubernetes.io/managed-by: helm
    project: smartdispatch
